--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
     "eslint-webpack-plugin": "^2.4.0",
-    "prettier": "^2.5.0"
+    "prettier": "^2.5.0",
+    "vue-svg-inline-loader": "^2.1.2"
   },
   "browserslist": [
     "last 10 Chrome versions",
