--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "prova",
+  "name": "age-website",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "AGE website",
+  "productName": "AGE website",
   "author": "Toyok1 <branchetti.simone@yahoo.it>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "format": "prettier --write \"**/*.{json,md,graphql,vue,js,ts}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
-    "vue-i18n": "^9.2.0-beta.23"
+    "vue-i18n": "^9.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
