--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,11 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "octref.vetur"
+    "stylelint.vscode-stylelint",
+    "johnsoncodehk.volar"
   ],
   "unwantedRecommendations": [
+    "octref.vetur",
     "hookyqr.beautify",
     "dbaeumer.jshint",
     "ms-vscode.vscode-typescript-tslint-plugin"
