--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.2",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0"
   },
