projects partially fixed

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.4",
+    "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.2",
     "core-js": "^3.20.3",
     "quasar": "^2.4.12",
-    "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.2",
-    "vue-i18n": "^9.0.0"
+    "vue-i18n": "^9.0.0",
+    "vue-sidebar-menu": "^4.8.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
